RESOLVED FIXED 249811
REGRESSION (248723@main): Videos on bbc.co.uk fail to load when content filtering is enabled
https://bugs.webkit.org/show_bug.cgi?id=249811
Summary REGRESSION (248723@main): Videos on bbc.co.uk fail to load when content filte...
Wenson Hsieh
Reported 2022-12-22 14:10:51 PST
Attachments
Wenson Hsieh
Comment 1 2022-12-22 14:34:34 PST
EWS
Comment 2 2023-01-03 11:18:01 PST
Committed 258394@main (5d11f0377c18): <https://commits.webkit.org/258394@main> Reviewed commits have been landed. Closing PR #8025 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.